package adapter

type computer interface {
	insertInSquarePort()
}
